# Vulkan-LoaderAndValidationLayers

./: .gitignore  CMakeLists.txt  compile_commands.json  update_external_sources.bat  update_external_sources.sh
cmake/: FindClang.cmake  FindClangTooling.cmake  FindLLVM.cmake
layers/: vk_validation_error_database.txt
tests/: CMakeLists.txt  layer_validation_tests.cpp
tests/tools/: CMakeLists.txt  check_error_codes_tests.cpp
tools/: CMakeLists.txt  check_error_codes.cpp  check_error_codes.h  check_error_codes_main.cpp  clang_headers.h
